--- a/index.html
+++ b/index.html
@@ -159,7 +159,29 @@
 </div>
 	
 	<!-- Side-Menu Script-->
-	<script type="text/javascript" src="js/side-menu.js"></script>
+	<script type="text/javascript">
+	$(function () {
+		$('.navbar-toggle').click(function () {
+			$('.navbar-nav').toggleClass('slide-in');
+				$('.side-body').toggleClass('body-slide-in');
+				$('#search').removeClass('in').addClass('collapse').slideUp(200);
+
+				/// uncomment code for absolute positioning tweek see top comment in css
+				//$('.absolute-wrapper').toggleClass('slide-in');
+        
+		});
+   
+		// Remove menu for searching
+		$('#search-trigger').click(function () {
+			$('.navbar-nav').removeClass('slide-in');
+			$('.side-body').removeClass('body-slide-in');
+
+			/// uncomment code for absolute positioning tweek see top comment in css
+			//$('.absolute-wrapper').removeClass('slide-in');
+
+		});
+	});
+	</script>
   
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
