--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </div>
 	
 	<!-- Side-Menu Script-->
-	<script type="text/javascript">
+	<script>
 	$(function () {
 		$('.navbar-toggle').click(function () {
 			$('.navbar-nav').toggleClass('slide-in');
