--- a/index.html
+++ b/index.html
@@ -105,45 +105,78 @@
 			<div class="side-menu-container">
 				<ul class="nav navbar-nav">
 
-					<li><a href="#"><span class="glyphicon glyphicon-send"></span> Link</a></li>
-					<li class="active"><a href="#"><span class="glyphicon glyphicon-plane"></span> Active Link</a></li>
-					<li><a href="#"><span class="glyphicon glyphicon-cloud"></span> Link</a></li>
-
 					<!-- Dropdown-->
 					<li class="panel panel-default" id="dropdown">
 						<a data-toggle="collapse" href="#dropdown-lvl1">
-							<span class="glyphicon glyphicon-user"></span> Sub Level <span class="caret"></span>
+							<span class="glyphicon glyphicon-flag"></span> Character <span class="caret"></span>
 						</a>
 
 						<!-- Dropdown level 1 -->
 						<div id="dropdown-lvl1" class="panel-collapse collapse">
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
-									<li><a href="#">Link</a></li>
-									<li><a href="#">Link</a></li>
-									<li><a href="#">Link</a></li>
+									<li><a href="#">Status</a></li>
+									<li><a href="#">Attributes</a></li>
+									<li><a href="#">Skills</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					
+					<!-- Dropdown-->
+					<li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl2">
+							<span class="glyphicon glyphicon-flag"></span> Guild <span class="caret"></span>
+						</a>
 
-									<!-- Dropdown level 2 -->
-									<li class="panel panel-default" id="dropdown">
-										<a data-toggle="collapse" href="#dropdown-lvl2">
-											<span class="glyphicon glyphicon-off"></span> Sub Level <span class="caret"></span>
-										</a>
-										<div id="dropdown-lvl2" class="panel-collapse collapse">
-											<div class="panel-body">
-												<ul class="nav navbar-nav">
-													<li><a href="#">Link</a></li>
-													<li><a href="#">Link</a></li>
-													<li><a href="#">Link</a></li>
-												</ul>
-											</div>
-										</div>
-									</li>
+						<!-- Dropdown level 2 -->
+						<div id="dropdown-lvl2" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="#">View Guild</a></li>
+									<li><a href="#">Create A Guild</a></li>
+									<li><a href="#">Find A Guild</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>						
+
+					<!-- Dropdown-->
+					<li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl3">
+							<span class="glyphicon glyphicon-flag"></span> Quests <span class="caret"></span>
+						</a>
+
+						<!-- Dropdown level 3 -->
+						<div id="dropdown-lvl3" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="#">Active Quests</a></li>
+									<li><a href="#">Find A Quest</a></li>
+									<li><a href="#">Create A Quest</a></li>
 								</ul>
 							</div>
 						</div>
 					</li>
 
-					<li><a href="#"><span class="glyphicon glyphicon-signal"></span> Link</a></li>
+					<!-- Dropdown-->
+					<li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl4">
+							<span class="glyphicon glyphicon-flag"></span> Armory <span class="caret"></span>
+						</a>
+
+						<!-- Dropdown level 4 -->
+						<div id="dropdown-lvl4" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="#">View Armory</a></li>
+									<li><a href="#">Add To Armory</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>					
+
+					<li><a href="#"><span class="glyphicon glyphicon-book"></span> Journal</a></li>
 
 				</ul>
 			</div><!-- /.navbar-collapse -->
@@ -157,7 +190,20 @@
         </div>
     </div>
 </div>
-	  
+	
+	<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+		apiKey: "AIzaSyDV0myVWfqDQac3AJzP9ridBSXavRP3lyg",
+		authDomain: "scorching-inferno-3715.firebaseapp.com",
+		databaseURL: "https://scorching-inferno-3715.firebaseio.com",
+		storageBucket: "scorching-inferno-3715.appspot.com",
+		messagingSenderId: "529780673682"
+	  };
+	  firebase.initializeApp(config);
+	</script>
+	
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
@@ -170,29 +216,7 @@
     <script src="js/bootstrap.min.js"></script>
 	
 	<!-- Side-Menu Script-->
-	<script>
-	$(function () {
-		$('.navbar-toggle').click(function () {
-			$('.navbar-nav').toggleClass('slide-in');
-				$('.side-body').toggleClass('body-slide-in');
-				$('#search').removeClass('in').addClass('collapse').slideUp(200);
-
-				/// uncomment code for absolute positioning tweek see top comment in css
-				//$('.absolute-wrapper').toggleClass('slide-in');
-        
-		});
-   
-		// Remove menu for searching
-		$('#search-trigger').click(function () {
-			$('.navbar-nav').removeClass('slide-in');
-			$('.side-body').removeClass('body-slide-in');
-
-			/// uncomment code for absolute positioning tweek see top comment in css
-			//$('.absolute-wrapper').removeClass('slide-in');
-
-		});
-	});
-	</script>
+	<script type="text/javascript" src="js/side-menu.js"></script>
 	
 </body>
 
